// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Event action messages fail fetching event 1`] = `
Object {
  "meta": Object {
    "type": "EVENT",
  },
  "payload": "filterName",
  "type": "FETCH_FAIL",
}
`;

exports[`Event action messages start fetching event 1`] = `
Object {
  "meta": Object {
    "type": "EVENT",
  },
  "payload": "filterName",
  "type": "FETCH_START",
}
`;

exports[`Event action messages success fetching event 1`] = `
Object {
  "meta": Object {
    "type": "EVENT",
  },
  "payload": "filterName",
  "type": "FETCH_SUCCESS",
}
`;
